--- a/.travis.yml
+++ b/.travis.yml
@@ -26,6 +26,7 @@ install:
       && sudo apt-get install -y libpng12-0 libpng12-dev libgsl0-dev libgsl0ldbl libgomp1 liblzo2-2 liblzo2-dev
       && sudo apt-get install -y libtiff5
       && sudo apt-get install -y libsndfile1-dev tree
+      && sudo apt-get install opencl-headers ocl-icd-libopencl1 ocl-icd-opencl-dev
       && sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-6 100
       && sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-6 100
       && sudo update-alternatives --set g++ /usr/bin/g++-6
@@ -61,7 +62,7 @@ script:
   - mkdir mandelbulber2/build
   - cd mandelbulber2/build
   - if [ "${TRAVIS_OS_NAME}" = "linux" ]; then
-         qmake ../qmake/mandelbulber.pro
+         qmake ../qmake/mandelbulber-opencl.pro
       ;
     else
          qmake -spec macx-xcode ../qmake/mandelbulber.pro
@@ -86,6 +87,25 @@ script:
          echo 'TODO test...'
       ;
     fi
+
+# AppImage building and uploading
+  - |
+    if [ "${TRAVIS_OS_NAME}" = "linux" ]; then
+      cd ../../build
+      make INSTALL_ROOT=appdir -j$(nproc) install ; find appdir/
+      cp appdir/usr/share/icons/hicolor/256x256/apps/mandelbulber.png appdir/usr/share/icons/hicolor/256x256/apps/mandelbulber2.png || true # https://github.com/buddhi1980/mandelbulber2/issues/453#issuecomment-475412753
+      wget -c -nv "https://github.com/probonopd/linuxdeployqt/releases/download/continuous/linuxdeployqt-continuous-x86_64.AppImage"
+      chmod a+x linuxdeployqt-continuous-x86_64.AppImage
+      unset QTDIR; unset QT_PLUGIN_PATH ; unset LD_LIBRARY_PATH
+      ./linuxdeployqt-continuous-x86_64.AppImage appdir/usr/share/applications/*.desktop -appimage
+      wget -c https://github.com/probonopd/uploadtool/raw/master/upload.sh
+      bash upload.sh Mandelbulber*.AppImage*
+    fi
+
+branches:
+  except:
+    - # Do not build tags that we create when we upload to GitHub Releases
+    - /^(?i:continuous)/
 
 notifications:
   email:
