--- a/azure/share/ci/templates/configure.yml
+++ b/azure/share/ci/templates/configure.yml
@@ -26,15 +26,6 @@ steps:
     if [ "$CCOMPILER" ]; then
         export CC="$CCOMPILER"
     fi
-    cmake ../. \
-          -DCMAKE_INSTALL_PREFIX=../_install \
-          -DCMAKE_BUILD_TYPE=${{ parameters.buildType }} \
-          -DCMAKE_CXX_STANDARD=${{ parameters.cxxStd }} \
-          -DCMAKE_CXX_FLAGS="${{ parameters.cxxFlags }}" \
-          -DCMAKE_VERBOSE_MAKEFILE:BOOL=${{ parameters.verbose }} \
-          -DBUILD_SHARED_LIBS=${{ parameters.buildSharedLibs }} \
-          -DOPENEXR_BUILD_UTILS=${{ parameters.buildUtils }} \
-          -DOPENEXR_RUN_FUZZ_TESTS=${{ parameters.runFuzzTests }} \
-          ${{ parameters.cmakeOpts }}
+    echo todo
   workingDirectory: _build
-  displayName: Configure OpenEXR
+  displayName: Configure
