--- a/azure/share/ci/templates/test.yml
+++ b/azure/share/ci/templates/test.yml
@@ -3,6 +3,6 @@
 
 steps:
 - bash: |
-    ctest -T Test -E PyIlmBase.* --output-on-failure -VV
+    echo todo
   workingDirectory: _build
-  displayName: Test OpenEXR
+  displayName: Test
