Fix paths in *.fract files to SHARED_PATH
This currently only works for unix
- Uses gettext's envsubst (added to deploy/README requirements)
- Patches using deploy/patch-templates.sh, for *.template files
- Moved *.fract files requiring patching to *.fract.template

The following files have paths in them that I didn't know how to patch:
- Graeme McLaren  collection - license Creative Commons  (CC-BY 4.0)/mandelbulb_eye 001.fract
- Robert Pancoast collection - license Creative Commons (CC-BY 4.0)/box-deuce-deuce.fract
- Robert Pancoast collection - license Creative Commons (CC-BY 4.0)/menger-fatbackstrokin.fract
- mandelbox_menger_with_textures.fract
- monte carlo global illumination.fract

(From a grep -rl '[A-Z]:\\\|/home\|/usr' deploy/share/mandelbulber2/,
there might be more.)

--- a/mandelbulber2/deploy/share/mandelbulber2/data/mandelbulber_1.21_defaults.fract.template
+++ b/mandelbulber2/deploy/share/mandelbulber2/data/mandelbulber_1.21_defaults.fract.template
@@ -412,9 +412,9 @@ fake_lights_max_iter 2;
 frame_no 0;
 tile_no 0;
 file_destination images/image;
-file_background /usr/share/mandelbulber/textures/background.jpg;
-file_envmap /usr/share/mandelbulber/textures/envmap.jpg;
-file_lightmap /usr/share/mandelbulber/textures/lightmap.jpg;
+file_background $SHARED_PATH/share/mandelbulber/textures/background.jpg;
+file_envmap $SHARED_PATH/share/mandelbulber/textures/envmap.jpg;
+file_lightmap $SHARED_PATH/share/mandelbulber/textures/lightmap.jpg;
 file_animation_path paths/path.txt;
 file_keyframes keyframes/keyframe;
 palette 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 ;
