Corrected msvc sollution to compile sources from formula/definition folder

--- a/mandelbulber2/msvc/mandelbulber2.vcxproj
+++ b/mandelbulber2/msvc/mandelbulber2.vcxproj
@@ -126,10 +126,10 @@
     </ClCompile>
     <ResourceCompile>
       <PreprocessorDefinitions>$(PreProcsO);%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>$(SourceDir)build-win;$(SourceDir)mandelbulber2;$(SourceDir)mandelbulber2\qt;$(SourceDir)mandelbulber2\src;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SourceDir)build-win;$(SourceDir)mandelbulber2;$(SourceDir)mandelbulber2\qt;$(SourceDir)mandelbulber2\src;$(SourceDir)mandelbulber2\formula\definition;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ResourceCompile>
     <Midl>
-      <AdditionalIncludeDirectories>$(SourceDir)build-win;$(SourceDir)mandelbulber2;$(SourceDir)mandelbulber2\qt;$(SourceDir)mandelbulber2\src;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SourceDir)build-win;$(SourceDir)mandelbulber2;$(SourceDir)mandelbulber2\qt;$(SourceDir)mandelbulber2\src;$(SourceDir)mandelbulber2\formula\definition;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <OutputDirectory>$(IntDir)</OutputDirectory>
       <HeaderFileName>%(Filename).h</HeaderFileName>
       <TypeLibraryName>%(Filename).tlb</TypeLibraryName>
@@ -155,7 +155,7 @@
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
-      <AdditionalIncludeDirectories>$(SourceDir)build-win;$(SourceDir)mandelbulber2;$(SourceDir)mandelbulber2\qt;$(SourceDir)mandelbulber2\src;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SourceDir)build-win;$(SourceDir)mandelbulber2;$(SourceDir)mandelbulber2\qt;$(SourceDir)mandelbulber2\src;$(SourceDir)mandelbulber2\formula\definition;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <AssemblerListingLocation>Debug/</AssemblerListingLocation>
       <BasicRuntimeChecks>EnableFastChecks</BasicRuntimeChecks>
       <CompileAs>CompileAsCpp</CompileAs>
@@ -174,10 +174,10 @@
     </ClCompile>
     <ResourceCompile>
       <PreprocessorDefinitions>$(PreProcsE);%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>$(SourceDir)build-win;$(SourceDir)mandelbulber2;$(SourceDir)mandelbulber2\qt;$(SourceDir)mandelbulber2\src;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SourceDir)build-win;$(SourceDir)mandelbulber2;$(SourceDir)mandelbulber2\qt;$(SourceDir)mandelbulber2\src;$(SourceDir)mandelbulber2\formula\definition;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ResourceCompile>
     <Midl>
-      <AdditionalIncludeDirectories>$(SourceDir)build-win;$(SourceDir)mandelbulber2;$(SourceDir)mandelbulber2\qt;$(SourceDir)mandelbulber2\src;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SourceDir)build-win;$(SourceDir)mandelbulber2;$(SourceDir)mandelbulber2\qt;$(SourceDir)mandelbulber2\src;$(SourceDir)mandelbulber2\formula\definition;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <OutputDirectory>$(IntDir)</OutputDirectory>
       <HeaderFileName>%(Filename).h</HeaderFileName>
       <TypeLibraryName>%(Filename).tlb</TypeLibraryName>
@@ -203,7 +203,7 @@
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|ARM'">
     <ClCompile>
-      <AdditionalIncludeDirectories>$(SourceDir)build-win;$(SourceDir)mandelbulber2;$(SourceDir)mandelbulber2\qt;$(SourceDir)mandelbulber2\src;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SourceDir)build-win;$(SourceDir)mandelbulber2;$(SourceDir)mandelbulber2\qt;$(SourceDir)mandelbulber2\src;$(SourceDir)mandelbulber2\formula\definition;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <AssemblerListingLocation>Debug/</AssemblerListingLocation>
       <BasicRuntimeChecks>EnableFastChecks</BasicRuntimeChecks>
       <CompileAs>CompileAsCpp</CompileAs>
@@ -222,10 +222,10 @@
     </ClCompile>
     <ResourceCompile>
       <PreprocessorDefinitions>$(PreProcsE);%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>$(SourceDir)build-win;$(SourceDir)mandelbulber2;$(SourceDir)mandelbulber2\qt;$(SourceDir)mandelbulber2\src;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SourceDir)build-win;$(SourceDir)mandelbulber2;$(SourceDir)mandelbulber2\qt;$(SourceDir)mandelbulber2\src;$(SourceDir)mandelbulber2\formula\definition;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ResourceCompile>
     <Midl>
-      <AdditionalIncludeDirectories>$(SourceDir)build-win;$(SourceDir)mandelbulber2;$(SourceDir)mandelbulber2\qt;$(SourceDir)mandelbulber2\src;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SourceDir)build-win;$(SourceDir)mandelbulber2;$(SourceDir)mandelbulber2\qt;$(SourceDir)mandelbulber2\src;$(SourceDir)mandelbulber2\formula\definition;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <OutputDirectory>$(IntDir)</OutputDirectory>
       <HeaderFileName>%(Filename).h</HeaderFileName>
       <TypeLibraryName>%(Filename).tlb</TypeLibraryName>
@@ -251,7 +251,7 @@
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <ClCompile>
-      <AdditionalIncludeDirectories>$(SourceDir)build-win;$(SourceDir)mandelbulber2;$(SourceDir)mandelbulber2\qt;$(SourceDir)mandelbulber2\src;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SourceDir)build-win;$(SourceDir)mandelbulber2;$(SourceDir)mandelbulber2\qt;$(SourceDir)mandelbulber2\src;$(SourceDir)mandelbulber2\formula\definition;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <AssemblerListingLocation>Release/</AssemblerListingLocation>
       <CompileAs>CompileAsCpp</CompileAs>
       <ExceptionHandling>Sync</ExceptionHandling>
@@ -274,10 +274,10 @@
     </ClCompile>
     <ResourceCompile>
       <PreprocessorDefinitions>$(PreProcsO);%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>$(SourceDir)build-win;$(SourceDir)mandelbulber2;$(SourceDir)mandelbulber2\qt;$(SourceDir)mandelbulber2\src;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SourceDir)build-win;$(SourceDir)mandelbulber2;$(SourceDir)mandelbulber2\qt;$(SourceDir)mandelbulber2\src;$(SourceDir)mandelbulber2\formula\definition;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ResourceCompile>
     <Midl>
-      <AdditionalIncludeDirectories>$(SourceDir)build-win;$(SourceDir)mandelbulber2;$(SourceDir)mandelbulber2\qt;$(SourceDir)mandelbulber2\src;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SourceDir)build-win;$(SourceDir)mandelbulber2;$(SourceDir)mandelbulber2\qt;$(SourceDir)mandelbulber2\src;$(SourceDir)mandelbulber2\formula\definition;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <OutputDirectory>$(IntDir)</OutputDirectory>
       <HeaderFileName>%(Filename).h</HeaderFileName>
       <TypeLibraryName>%(Filename).tlb</TypeLibraryName>
@@ -303,7 +303,7 @@
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='AnalysisRelease|x64'">
     <ClCompile>
-      <AdditionalIncludeDirectories>$(SourceDir)build-win;$(SourceDir)mandelbulber2;$(SourceDir)mandelbulber2\qt;$(SourceDir)mandelbulber2\src;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SourceDir)build-win;$(SourceDir)mandelbulber2;$(SourceDir)mandelbulber2\qt;$(SourceDir)mandelbulber2\src;$(SourceDir)mandelbulber2\formula\definition;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <AssemblerListingLocation>Release/</AssemblerListingLocation>
       <CompileAs>CompileAsCpp</CompileAs>
       <ExceptionHandling>Sync</ExceptionHandling>
@@ -327,10 +327,10 @@
     </ClCompile>
     <ResourceCompile>
       <PreprocessorDefinitions>$(PreProcs);%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>$(SourceDir)build-win;$(SourceDir)mandelbulber2;$(SourceDir)mandelbulber2\qt;$(SourceDir)mandelbulber2\src;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SourceDir)build-win;$(SourceDir)mandelbulber2;$(SourceDir)mandelbulber2\qt;$(SourceDir)mandelbulber2\src;$(SourceDir)mandelbulber2\formula\definition;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ResourceCompile>
     <Midl>
-      <AdditionalIncludeDirectories>$(SourceDir)build-win;$(SourceDir)mandelbulber2;$(SourceDir)mandelbulber2\qt;$(SourceDir)mandelbulber2\src;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SourceDir)build-win;$(SourceDir)mandelbulber2;$(SourceDir)mandelbulber2\qt;$(SourceDir)mandelbulber2\src;$(SourceDir)mandelbulber2\formula\definition;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <OutputDirectory>$(IntDir)</OutputDirectory>
       <HeaderFileName>%(Filename).h</HeaderFileName>
       <TypeLibraryName>%(Filename).tlb</TypeLibraryName>
@@ -356,7 +356,7 @@
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <ClCompile>
-      <AdditionalIncludeDirectories>$(SourceDir)build-win;$(SourceDir)mandelbulber2;$(SourceDir)mandelbulber2\qt;$(SourceDir)mandelbulber2\src;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SourceDir)build-win;$(SourceDir)mandelbulber2;$(SourceDir)mandelbulber2\qt;$(SourceDir)mandelbulber2\src;$(SourceDir)mandelbulber2\formula\definition;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <AssemblerListingLocation>Release/</AssemblerListingLocation>
       <CompileAs>CompileAsCpp</CompileAs>
       <ExceptionHandling>Sync</ExceptionHandling>
@@ -375,10 +375,10 @@
     </ClCompile>
     <ResourceCompile>
       <PreprocessorDefinitions>$(PreProcsE);%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>$(SourceDir)build-win;$(SourceDir)mandelbulber2;$(SourceDir)mandelbulber2\qt;$(SourceDir)mandelbulber2\src;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SourceDir)build-win;$(SourceDir)mandelbulber2;$(SourceDir)mandelbulber2\qt;$(SourceDir)mandelbulber2\src;$(SourceDir)mandelbulber2\formula\definition;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ResourceCompile>
     <Midl>
-      <AdditionalIncludeDirectories>$(SourceDir)build-win;$(SourceDir)mandelbulber2;$(SourceDir)mandelbulber2\qt;$(SourceDir)mandelbulber2\src;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SourceDir)build-win;$(SourceDir)mandelbulber2;$(SourceDir)mandelbulber2\qt;$(SourceDir)mandelbulber2\src;$(SourceDir)mandelbulber2\formula\definition;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <OutputDirectory>$(IntDir)</OutputDirectory>
       <HeaderFileName>%(Filename).h</HeaderFileName>
       <TypeLibraryName>%(Filename).tlb</TypeLibraryName>
@@ -404,7 +404,7 @@
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='AnalysisRelease|Win32'">
     <ClCompile>
-      <AdditionalIncludeDirectories>$(SourceDir)build-win;$(SourceDir)mandelbulber2;$(SourceDir)mandelbulber2\qt;$(SourceDir)mandelbulber2\src;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SourceDir)build-win;$(SourceDir)mandelbulber2;$(SourceDir)mandelbulber2\qt;$(SourceDir)mandelbulber2\src$(SourceDir)mandelbulber2\formula\definition;;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <AssemblerListingLocation>Release/</AssemblerListingLocation>
       <CompileAs>CompileAsCpp</CompileAs>
       <ExceptionHandling>Sync</ExceptionHandling>
@@ -423,10 +423,10 @@
     </ClCompile>
     <ResourceCompile>
       <PreprocessorDefinitions>$(PreProcs);%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>$(SourceDir)build-win;$(SourceDir)mandelbulber2;$(SourceDir)mandelbulber2\qt;$(SourceDir)mandelbulber2\src;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SourceDir)build-win;$(SourceDir)mandelbulber2;$(SourceDir)mandelbulber2\qt;$(SourceDir)mandelbulber2\src;$(SourceDir)mandelbulber2\formula\definition;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ResourceCompile>
     <Midl>
-      <AdditionalIncludeDirectories>$(SourceDir)build-win;$(SourceDir)mandelbulber2;$(SourceDir)mandelbulber2\qt;$(SourceDir)mandelbulber2\src;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SourceDir)build-win;$(SourceDir)mandelbulber2;$(SourceDir)mandelbulber2\qt;$(SourceDir)mandelbulber2\src;$(SourceDir)mandelbulber2\formula\definition;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <OutputDirectory>$(IntDir)</OutputDirectory>
       <HeaderFileName>%(Filename).h</HeaderFileName>
       <TypeLibraryName>%(Filename).tlb</TypeLibraryName>
@@ -452,7 +452,7 @@
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|ARM'">
     <ClCompile>
-      <AdditionalIncludeDirectories>$(SourceDir)build-win;$(SourceDir)mandelbulber2;$(SourceDir)mandelbulber2\qt;$(SourceDir)mandelbulber2\src;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SourceDir)build-win;$(SourceDir)mandelbulber2;$(SourceDir)mandelbulber2\qt;$(SourceDir)mandelbulber2\src;$(SourceDir)mandelbulber2\formula\definition;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <AssemblerListingLocation>Release/</AssemblerListingLocation>
       <CompileAs>CompileAsCpp</CompileAs>
       <ExceptionHandling>Sync</ExceptionHandling>
@@ -471,10 +471,10 @@
     </ClCompile>
     <ResourceCompile>
       <PreprocessorDefinitions>$(PreProcsE);%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>$(SourceDir)build-win;$(SourceDir)mandelbulber2;$(SourceDir)mandelbulber2\qt;$(SourceDir)mandelbulber2\src;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SourceDir)build-win;$(SourceDir)mandelbulber2;$(SourceDir)mandelbulber2\qt;$(SourceDir)mandelbulber2\src;$(SourceDir)mandelbulber2\formula\definition;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ResourceCompile>
     <Midl>
-      <AdditionalIncludeDirectories>$(SourceDir)build-win;$(SourceDir)mandelbulber2;$(SourceDir)mandelbulber2\qt;$(SourceDir)mandelbulber2\src;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SourceDir)build-win;$(SourceDir)mandelbulber2;$(SourceDir)mandelbulber2\qt;$(SourceDir)mandelbulber2\src;$(SourceDir)mandelbulber2\formula\definition;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <OutputDirectory>$(IntDir)</OutputDirectory>
       <HeaderFileName>%(Filename).h</HeaderFileName>
       <TypeLibraryName>%(Filename).tlb</TypeLibraryName>
@@ -500,7 +500,7 @@
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='AnalysisRelease|ARM'">
     <ClCompile>
-      <AdditionalIncludeDirectories>$(SourceDir)build-win;$(SourceDir)mandelbulber2;$(SourceDir)mandelbulber2\qt;$(SourceDir)mandelbulber2\src;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SourceDir)build-win;$(SourceDir)mandelbulber2;$(SourceDir)mandelbulber2\qt;$(SourceDir)mandelbulber2\src;$(SourceDir)mandelbulber2\formula\definition;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <AssemblerListingLocation>Release/</AssemblerListingLocation>
       <CompileAs>CompileAsCpp</CompileAs>
       <ExceptionHandling>Sync</ExceptionHandling>
@@ -519,10 +519,10 @@
     </ClCompile>
     <ResourceCompile>
       <PreprocessorDefinitions>$(PreProcs);%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>$(SourceDir)build-win;$(SourceDir)mandelbulber2;$(SourceDir)mandelbulber2\qt;$(SourceDir)mandelbulber2\src;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SourceDir)build-win;$(SourceDir)mandelbulber2;$(SourceDir)mandelbulber2\qt;$(SourceDir)mandelbulber2\src;$(SourceDir)mandelbulber2\formula\definition;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ResourceCompile>
     <Midl>
-      <AdditionalIncludeDirectories>$(SourceDir)build-win;$(SourceDir)mandelbulber2;$(SourceDir)mandelbulber2\qt;$(SourceDir)mandelbulber2\src;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SourceDir)build-win;$(SourceDir)mandelbulber2;$(SourceDir)mandelbulber2\qt;$(SourceDir)mandelbulber2\src;$(SourceDir)mandelbulber2\formula\definition;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <OutputDirectory>$(IntDir)</OutputDirectory>
       <HeaderFileName>%(Filename).h</HeaderFileName>
       <TypeLibraryName>%(Filename).tlb</TypeLibraryName>
@@ -560,6 +560,9 @@
     <ClInclude Include="$(SourceDir)mandelbulber2\qt\*.h" />
     <ClInclude Include="$(SourceDir)mandelbulber2\qt\*.hpp" />
     <ClCompile Include="$(SourceDir)mandelbulber2\qt\*.cpp" />
+    <ClInclude Include="$(SourceDir)mandelbulber2\formula\definition\*.h" />
+    <ClInclude Include="$(SourceDir)mandelbulber2\formula\definition\*.hpp" />
+    <ClCompile Include="$(SourceDir)mandelbulber2\formula\definition\*.cpp" />
     <ClInclude Include="$(SourceDir)mandelbulber2\opencl\*.h" />
     <ClInclude Include="$(SourceDir)mandelbulber2\opencl\*.hpp" />
     <ClCompile Include="$(SourceDir)mandelbulber2\opencl\*.cpp" />
