rollback changes in travis.yml (to make AppImage building worikng)

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,9 @@
-# Travis build configuration January 2020
+# Travis build configuration
 # https://docs.travis-ci.com/user/customizing-the-build/
 sudo: required
-
-dist: bionic
+dist: trusty
 
 language: cpp
-
-cache: ccache
 
 os:
   - linux
@@ -19,22 +16,28 @@ env:
 install:
  # extra-cmake-modules not present in precise (needed for openexr)
   - if [ "${TRAVIS_OS_NAME}" = "linux" ]; then
-      sudo apt-get -qq update
+      sudo apt-add-repository -y ppa:ubuntu-toolchain-r/test
+      && sudo apt-add-repository -y ppa:beineri/opt-qt571-trusty
+      && sudo add-apt-repository -y ppa:ubuntu-sdk-team/ppa
+      && sudo apt-get -qq update
+      && sudo apt-get -qq install g++-6 libc6-i386
       && sudo apt-get install -y mesa-common-dev libgl1-mesa-dev
-      && sudo apt-get install -y qtbase5-dev qt5-default libqt5multimedia5 libqt5designer5 qttools5-dev qtmultimedia5-dev
-      && sudo apt-get install -y libpng-dev libgsl-dev libgsl-dbg libgomp1 liblzo2-2 liblzo2-dev
+      && sudo apt-get install -y qt57base qt57tools qt57multimedia
+      && sudo apt-get install -y libpng12-0 libpng12-dev libgsl0-dev libgsl0ldbl libgomp1 liblzo2-2 liblzo2-dev
+      && sudo apt-get install -y libqt5svg5
       && sudo apt-get install -y libtiff5
       && sudo apt-get install -y libsndfile1-dev tree
-      && sudo apt-get install -y extra-cmake-modules
       && sudo apt-get install opencl-headers ocl-icd-libopencl1 ocl-icd-opencl-dev
+      && sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-6 100
+      && sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-6 100
+      && sudo update-alternatives --set g++ /usr/bin/g++-6
+      && sudo update-alternatives --set gcc /usr/bin/gcc-6
       && gcc --version
       && lsb_release -a
       ;
     else
          brew update > /dev/null
       && brew install qt5 gsl llvm lzo libsndfile tree
-      && brew install ccache
-      && export PATH="/usr/local/opt/ccache/libexec:$PATH"
       && export CC=/usr/local/opt/llvm/bin/clang
       && export CXX=/usr/local/opt/llvm/bin/clang++
       && export LDFLAGS="-L/usr/local/opt/llvm/lib $LDFLAGS"
@@ -45,7 +48,12 @@ install:
 
 script:
 #build
-  - if [ "${TRAVIS_OS_NAME}" = "osx" ]; then
+  - if [ "${TRAVIS_OS_NAME}" = "linux" ]; then
+         QTDIR="/opt/qt57"
+      && PATH="$QTDIR/bin:$PATH"
+      && qt57-env.sh 
+      ;
+    else
          QTDIR="/usr/local/opt/qt5"
       && PATH="$QTDIR/bin:$PATH"
       && LDFLAGS=-L$QTDIR/lib
@@ -94,7 +102,6 @@ script:
       wget -c https://github.com/probonopd/uploadtool/raw/master/upload.sh
       bash upload.sh Mandelbulber*.AppImage*
     fi
-
 branches:
   except:
     - # Do not build tags that we create when we upload to GitHub Releases
