--- a/mandelbulber2/msvc/mandelbulber2.rc
+++ b/mandelbulber2/msvc/mandelbulber2.rc
@@ -79,12 +79,12 @@ BEGIN
         BEGIN
             VALUE "CompanyName", "Mandelbulber Team"
             VALUE "FileDescription", "Mandelbulber generates three-dimensional fractals."
-            VALUE "FileVersion", "2.21-dev"
+            VALUE "FileVersion", "2.21"
             VALUE "InternalName", "mandelbulber2.exe"
             VALUE "LegalCopyright", "Copyright (C) 2019 Mandelbulber Team"
             VALUE "OriginalFilename", "mandelbulber2.exe"
             VALUE "ProductName", "Mandelbulber"
-            VALUE "ProductVersion", "2.21-dev"
+            VALUE "ProductVersion", "2.21"
         END
     END
     BLOCK "VarFileInfo"
