Added option to include SVG library to AppImage
SVG icons were not displayed

--- a/.travis.yml
+++ b/.travis.yml
@@ -98,7 +98,7 @@ script:
       wget -c -nv "https://github.com/probonopd/linuxdeployqt/releases/download/continuous/linuxdeployqt-continuous-x86_64.AppImage"
       chmod a+x linuxdeployqt-continuous-x86_64.AppImage
       unset QTDIR; unset QT_PLUGIN_PATH ; unset LD_LIBRARY_PATH
-      ./linuxdeployqt-continuous-x86_64.AppImage appdir/usr/share/applications/*.desktop -appimage
+      ./linuxdeployqt-continuous-x86_64.AppImage appdir/usr/share/applications/*.desktop -appimage -extra-plugins=iconengines,imageformats
       wget -c https://github.com/probonopd/uploadtool/raw/master/upload.sh
       bash upload.sh Mandelbulber*.AppImage*
     fi
