--- a/.travis.yml
+++ b/.travis.yml
@@ -22,7 +22,7 @@ install:
       && sudo apt-get -qq update
       && sudo apt-get -qq install g++-6 libc6-i386
       && sudo apt-get install -y mesa-common-dev libgl1-mesa-dev
-      && sudo apt-get install -y qt57base qt57tools qt57multimedia
+      && sudo apt-get install -y qt57base qt57tools qt57multimedia qt57svg
       && sudo apt-get install -y libpng12-0 libpng12-dev libgsl0-dev libgsl0ldbl libgomp1 liblzo2-2 liblzo2-dev
       && sudo apt-get install -y libqt5svg5
       && sudo apt-get install -y libtiff5
