--- a/mandelbulber2/msvc/mandelbulber2.rc
+++ b/mandelbulber2/msvc/mandelbulber2.rc
@@ -61,8 +61,8 @@ END
 //
 
 VS_VERSION_INFO VERSIONINFO
- FILEVERSION 2,22,0,0
- PRODUCTVERSION 2,22,0,0
+ FILEVERSION 2,23,0,0
+ PRODUCTVERSION 2,23,0,0
  FILEFLAGSMASK 0x3fL
 #ifdef _DEBUG
  FILEFLAGS 0x1L
@@ -79,12 +79,12 @@ BEGIN
         BEGIN
             VALUE "CompanyName", "Mandelbulber Team"
             VALUE "FileDescription", "Mandelbulber generates three-dimensional fractals."
-            VALUE "FileVersion", "2.22"
+            VALUE "FileVersion", "2.23-dev"
             VALUE "InternalName", "mandelbulber2.exe"
             VALUE "LegalCopyright", "Copyright (C) 2020 Mandelbulber Team"
             VALUE "OriginalFilename", "mandelbulber2.exe"
             VALUE "ProductName", "Mandelbulber"
-            VALUE "ProductVersion", "2.22"
+            VALUE "ProductVersion", "2.23-dev"
         END
     END
     BLOCK "VarFileInfo"
