--- a/mandelbulber2/cmake/CMakeLists.txt
+++ b/mandelbulber2/cmake/CMakeLists.txt
@@ -16,6 +16,10 @@ elseif ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "MSVC")
 	message(STATUS "MSVC Compiler Detected")
 endif()
 
+#set C++ 14
+set(CMAKE_CXX_STANDARD 14)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
+
 # Find includes in corresponding build directories.
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
 
