--- a/.travis.yml
+++ b/.travis.yml
@@ -92,13 +92,20 @@ script:
   - |
     if [ "${TRAVIS_OS_NAME}" = "linux" ] && [ "${TRAVIS_EVENT_TYPE}" = "cron" ]; then
       cd ../../build
+      
       make INSTALL_ROOT=appdir -j$(nproc) install ; find appdir/
+      
       cp appdir/usr/share/icons/hicolor/256x256/apps/mandelbulber.png appdir/usr/share/icons/hicolor/256x256/apps/mandelbulber2.png || true # https://github.com/buddhi1980/mandelbulber2/issues/453#issuecomment-475412753
+      
       wget -c -nv "https://github.com/probonopd/linuxdeployqt/releases/download/continuous/linuxdeployqt-continuous-x86_64.AppImage"
       chmod a+x linuxdeployqt-continuous-x86_64.AppImage
+      
       unset QTDIR; unset QT_PLUGIN_PATH ; unset LD_LIBRARY_PATH
       ./linuxdeployqt-continuous-x86_64.AppImage appdir/usr/share/applications/*.desktop -appimage -extra-plugins=iconengines,imageformats
+      
+      export UPLOADTOOL_ISPRERELEASE=true
       wget -c https://github.com/probonopd/uploadtool/raw/master/upload.sh
+      
       bash upload.sh Mandelbulber*.AppImage*
     fi
 branches:
