--- a/.travis.yml
+++ b/.travis.yml
@@ -16,33 +16,33 @@ install:
  # extra-cmake-modules not present in precise (needed for openexr)
   - if [ "${TRAVIS_OS_NAME}" = "linux" ]; then
       sudo apt-add-repository -y ppa:ubuntu-toolchain-r/test
-      && sudo apt-add-repository -y ppa:beineri/opt-qt571-trusty
-      && sudo add-apt-repository -y ppa:ubuntu-sdk-team/ppa
-      && sudo apt-get -qq update
-      && sudo apt-get -qq install g++-6 libc6-i386
-      && sudo apt-get install -y mesa-common-dev libgl1-mesa-dev
-      && sudo apt-get install -y qt57base qt57tools qt57multimedia qt57svg
-      && sudo apt-get install -y libpng12-0 libpng12-dev libgsl0-dev libgsl0ldbl libgomp1 liblzo2-2 liblzo2-dev
-      && sudo apt-get install -y libqt5svg5
-      && sudo apt-get install -y libtiff5
-      && sudo apt-get install -y libsndfile1-dev tree
-      && sudo apt-get install opencl-headers ocl-icd-libopencl1 ocl-icd-opencl-dev
-      && sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-6 100
-      && sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-6 100
-      && sudo update-alternatives --set g++ /usr/bin/g++-6
-      && sudo update-alternatives --set gcc /usr/bin/gcc-6
-      && gcc --version
-      && lsb_release -a
-      ;
+      sudo apt-add-repository -y ppa:beineri/opt-qt571-trusty
+      sudo add-apt-repository -y ppa:ubuntu-sdk-team/ppa
+      sudo apt-get -qq update
+      sudo apt-get -qq install g++-6 libc6-i386
+      sudo apt-get install -y mesa-common-dev libgl1-mesa-dev
+      sudo apt-get install -y qt57base qt57tools qt57multimedia qt57svg
+      sudo apt-get install -y libpng12-0 libpng12-dev libgsl0-dev libgsl0ldbl libgomp1 liblzo2-2 liblzo2-dev
+      sudo apt-get install -y libqt5svg5
+      sudo apt-get install -y libtiff5
+      sudo apt-get install -y libsndfile1-dev tree
+      sudo apt-get install opencl-headers ocl-icd-libopencl1 ocl-icd-opencl-dev
+      sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-6 100
+      sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-6 100
+      sudo update-alternatives --set g++ /usr/bin/g++-6
+      sudo update-alternatives --set gcc /usr/bin/gcc-6
+      gcc --version
+      lsb_release -a
+      
     else
          brew update > /dev/null
-      && brew install qt5 gsl llvm lzo libsndfile tree
-      && export CC=/usr/local/opt/llvm/bin/clang
-      && export CXX=/usr/local/opt/llvm/bin/clang++
-      && export LDFLAGS="-L/usr/local/opt/llvm/lib $LDFLAGS"
-      && export CPPFLAGS="-I/usr/local/opt/llvm/include $CPPFLAGS"
-      && chmod -R 755 /usr/local/opt/qt5/*
-      ;
+      brew install qt5 gsl llvm lzo libsndfile tree
+      export CC=/usr/local/opt/llvm/bin/clang
+      export CXX=/usr/local/opt/llvm/bin/clang++
+      export LDFLAGS="-L/usr/local/opt/llvm/lib $LDFLAGS"
+      export CPPFLAGS="-I/usr/local/opt/llvm/include $CPPFLAGS"
+      chmod -R 755 /usr/local/opt/qt5/*
+      
     fi
 
 script:
