Travis CI switched to xenial

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 # Travis build configuration
 # https://docs.travis-ci.com/user/customizing-the-build/
 sudo: required
-dist: trusty
+dist: xenial
 
 language: cpp
 
