--- a/.travis.yml
+++ b/.travis.yml
@@ -22,7 +22,7 @@ install:
       sudo apt-get -qq install g++-6 libc6-i386;
       sudo apt-get install -y mesa-common-dev libgl1-mesa-dev;
       sudo apt-get install -y qt59base qt59tools qt59multimedia qt59svg;
-      sudo apt-get install -y libpng12-0 libpng12-dev libgsl0-dev libgsl0ldbl libgomp1 liblzo2-2 liblzo2-dev;
+      sudo apt-get install -y libpng12-0 libpng12-dev libgsl-dev libgsl2 libgomp1 liblzo2-2 liblzo2-dev;
       sudo apt-get install -y libqt5svg5;
       sudo apt-get install -y libtiff5;
       sudo apt-get install -y libsndfile1-dev tree;
