Denoiser converted to use Qt Concurrent

--- a/mandelbulber2/cmake/CMakeLists.txt
+++ b/mandelbulber2/cmake/CMakeLists.txt
@@ -40,6 +40,7 @@ find_package(Qt5Gui REQUIRED)
 find_package(Qt5UiTools REQUIRED)
 find_package(Qt5Test REQUIRED)
 find_package(Qt5Multimedia REQUIRED)
+find_package(Qt5Concurrent REQUIRED)
 
 # Find other required libraries.
 find_package(PNG REQUIRED)
@@ -90,7 +91,7 @@ add_executable(mandelbulber2 WIN32
 	${SOURCE_FILES} ${ADDITIONAL_EXECUTABLE} ${qt_UI_H})
 
 # Link qt libraries.
-qt5_use_modules(mandelbulber2 Core Widgets Network Gui UiTools Test Multimedia)
+qt5_use_modules(mandelbulber2 Core Widgets Network Gui UiTools Test Multimedia Concurrent)
 
 # Link other required libraries.
 include_directories(${PNG_INCLUDE_DIR} ${GSL_INCLUDE_DIRS} ${LZO_INCLUDE_DIR})
